# adk-modular-architecture

./: .gitignore  LICENSE  README.md
firecrawl_mcp/: .env.example  README.md  cli.py  pyproject.toml
firecrawl_mcp/src/: server.py
firecrawl_mcp/src/infrastructure/: config.py  firecrawl_client.py  mcp_instance.py
firecrawl_mcp/src/tool/: scrape_url.py
firecrawl_mcp/src/type/: url_param.py  web_page_scraping_result.py
knowledge_base_rag/: .env.example  .gitignore  README.md  cli.py  pyproject.toml
knowledge_base_rag/src/knowledge_base_agent/: a2a_server.py  agent.json  agent.py
knowledge_base_rag/src/knowledge_base_agent/database/: chroma_client.py
knowledge_base_rag/src/knowledge_base_agent/prompt/: prompt.py
knowledge_base_rag/src/knowledge_base_agent/tool/: import_document.py  search_company_knowledge_base.py
presales_workflow/: .env.example  README.md  cli.py  pyproject.toml
presales_workflow/src/presales_workflow_agent/: agent.py
presales_workflow/src/presales_workflow_agent/prompt/: root_agent_prompt.py
presales_workflow/src/presales_workflow_agent/sub_agent/document_analysis/: agent.py
presales_workflow/src/presales_workflow_agent/sub_agent/offering/: agent.py
presales_workflow/src/shared/agent/: __init__.py  knowledge_base_remote_agent.py  web_search_agent.py
presales_workflow/src/shared/artifact/: artifact_definition.py
presales_workflow/src/shared/config/: model_config.py
presales_workflow/src/shared/mcp/: web_scrapper_mcp.py
presales_workflow/src/shared/template/: company_experience.py  company_template.py  project_description_template.py
presales_workflow/src/shared/tool/: get_artifact.py  list_artifacts.py  save_artifact.py
(+63 files in other folders)
